# qtqp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: iterative_kkt_solvers.md
src/qtqp/: __init__.py  clarabel.py  direct.py  indirect.py  kkt.py  solvers_dense.py  solvers_gpu.py  solvers_sparse.py
src/qtqp/linear/: __init__.py  direct.py  indirect.py
tests/: __init__.py  conftest.py  test_indirect.py  test_qtqp.py
