[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtqp"
version = "0.0.4"
description = "The 'cutie' QP solver."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{name = "Brendan O'Donoghue", email = "bodonoghue85@gmail.com"}]
requires-python = ">=3.11"

# Runtime deps (install-time)
dependencies = [
  "numpy>=1.23",
  "scipy>=1.16",
  "py-mkl-pardiso; (platform_system == 'Linux' or platform_system == 'Windows') and platform_machine == 'x86_64'",
  "macldlt; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
license-files = []
package-dir = {"" = "src"}

# Tell setuptools to find packages in the 'src' directory
[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
